Fix browse mode sidebar. previously not showing blue border around active sites correctly.

--- a/app/assets/stylesheets/browse_mode.css.scss
+++ b/app/assets/stylesheets/browse_mode.css.scss
@@ -71,7 +71,7 @@ img.browse_mode_sidebar_icons{
   border-top: 1px solid #707070;
 }
 #browse_mode_list_selected .browse_mode_sidebar_icons,.blue_border{
-  border:2px solid #40C3FD;
+  border:3px solid #40C3FD;
 }
 #browse_mode_active_highlight,#browse_mode_discover_highlight,#browse_mode_mybookmarks_highlight{
   display:none;
